
Release 2.0.4-beta - UNRELEASED

  INCOMPATIBLE CHANGES

  NEW FEATURES

    HADOOP-9283. Add support for running the Hadoop client on AIX. (atm)

  IMPROVEMENTS

    HADOOP-9253. Capture ulimit info in the logs at service start time.
    (Arpit Gupta via suresh)

  OPTIMIZATIONS

  BUG FIXES

    HADOOP-9294. GetGroupsTestBase fails on Windows. (Chris Nauroth via suresh)

Release 2.0.3-alpha - 2013-02-06 

  INCOMPATIBLE CHANGES

    HADOOP-8999. SASL negotiation is flawed (daryn)

  NEW FEATURES

    HADOOP-8597. Permit FsShell's text command to read Avro files.
    (Ivan Vladimirov Ivanov via cutting)

    HADOOP-9020. Add a SASL PLAIN server (daryn via bobby)

    HADOOP-9090. Support on-demand publish of metrics. (Mostafa Elhemali via
    suresh)

    HADOOP-9054. Add AuthenticationHandler that uses Kerberos but allows for 
    an alternate form of authentication for browsers. (rkanter via tucu)

  IMPROVEMENTS

    HADOOP-8789. Tests setLevel(Level.OFF) should be Level.ERROR.
    (Andy Isaacson via eli)

    HADOOP-8755. Print thread dump when tests fail due to timeout. (Andrey
    Klochkov via atm)

    HADOOP-8806. libhadoop.so: dlopen should be better at locating
    libsnappy.so, etc. (Colin Patrick McCabe via eli)

    HADOOP-8812. ExitUtil#terminate should print Exception#toString. (eli)

    HADOOP-8736. Add Builder for building RPC server. (Brandon Li via Suresh)

    HADOOP-8851. Use -XX:+HeapDumpOnOutOfMemoryError JVM option in the forked
    tests. (Ivan A. Veselovsky via atm)

    HADOOP-8783. Improve RPC.Server's digest auth (daryn)

    HADOOP-8889. Upgrade to Surefire 2.12.3 (todd)

    HADOOP-8804. Improve Web UIs when the wildcard address is used.
    (Senthil Kumar via eli)

    HADOOP-8894. GenericTestUtils.waitFor should dump thread stacks on timeout
    (todd)

    HADOOP-8909. Hadoop Common Maven protoc calls must not depend on external
    sh script. (Chris Nauroth via suresh)

    HADOOP-8911. CRLF characters in source and text files.